testdata/invalid/invalid_const_float_no_semi.bop
const float32 floatconstnosemi = 1.0